Fixed positioning, background scalability, and made elements wrap around center ball.

--- a/src/main.css
+++ b/src/main.css
@@ -3,25 +3,39 @@
     src: url('../resources/pixelFont.ttf');
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 html {
-    width: 100%;
+    margin: 0 0;
+    padding: 0 0;
+    min-width: 100vw;
+    min-height: 100vh;
+    -ms-overflow-style: none;
+}
+
+body {
+    position: absolute;
+
+    margin: 0 0;
+    padding: 0 0;
+
+    min-width: 100vw;
+    min-height: 100vh;
     height: 100%;
+    width: 100%;
 
     background-image: url("../resources/background.jpg");
     background-repeat: repeat-x;
     background-size: auto 100%;
+    background-attachment: fixed;
 
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-duration: 40s;
     animation-name: backgroundScroll;
-}
 
-body {
-    margin: 0 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
 }
 
 @keyframes backgroundScroll {
@@ -35,39 +49,74 @@ body {
 
 
 
-/* Information elements */
-.infoBox {
+#leftInfoWrapper {
     position: absolute;
-    width: 40%;
-    height: 50%;
+    width: 50%;
+}
+
+#leftInfoBuffer {
+    float: right;
+    width: 16vmin;
+    height: calc(52vmin + 5em);
 }
 
 #leftInfo {
-    outline: 2px green solid;
-    left: 0;
+    position: relative;
+    display: inline-block;
+    width: min-content;
+}
+
+
+#rightInfoWrapper {
+    position: absolute;
+    right: 0;
+    width: 50%;
+}
+
+#rightInfoBuffer {
+    float: left;
+    width: 16vmin;
+    height: calc(52vmin + 5em);
 }
 
 #rightInfo {
-    outline: 2px purple solid;
-    right: 0;
 }
 
-#bottomInfo {
-    position: relative;
-    display: block;
-
-    width: 100%;
-    height: calc(50% - (4.2em + 30px));
-}
-
-/* Info bar elements*/
+/* Left info*/
 .infoContainer {
-    position: absolute;
+    position: relative;
+    width: min-content;
+    display: block;
     left: -3em;
+    margin-top: 1.5em;
 
     font-family: pixelFont, serif;
     font-size: 1.2em;
     white-space: nowrap;
+}
+
+/* Rolling info pokeball */
+.infoPokeball {
+    position: absolute;
+
+    z-index: 2;
+
+    height: 3em;
+    width: 3em;
+
+    top: -.5em;
+    left: -1em;
+
+    background-image: url("../resources/pokeball.png");
+    background-size: 100% 100%;
+
+    border: 0 solid rgba(255, 255, 255, 0);
+    border-radius: 2em;
+    box-shadow: 0 0 .2em rgba(0,0,0,.5);
+
+    animation-duration: .75s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: both;
 }
 
 .infoBar {
@@ -109,124 +158,83 @@ body {
     margin-right: 2em;
 }
 
-#infoName {
-    top: 10%;
-}
-
-#infoWeight {
-    top: 30%;
-}
-
-#infoHeight {
-    top: 50%;
-}
-
-/* Rolling info pokeball */
-.infoPokeball {
-    position: absolute;
-
-    z-index: 2;
-
-    height: 3em;
-    width: 3em;
-
-    top: -.5em;
-    left: -1em;
-
-    background-image: url("../resources/pokeball.png");
-    background-size: 100% 100%;
-
-    border: 0 solid rgba(255, 255, 255, 0);
-    border-radius: 2em;
-    box-shadow: 0 0 .2em rgba(0,0,0,.5);
-
-    animation-duration: .75s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: both;
-}
-
-
-
-/* Big Pokeball */
-#pokeBall {
+/* Stats table */
+#infoStatsTable {
     position: relative;
     display: block;
-    width: 20%;
-    height: 50%;
 
-    left: 50%;
-    transform: translate(-50%, 0);
+    width: min-content;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    left: -3em;
+
+    border-spacing: 0 .3em;
+
+    font-family: pixelFont, serif;
+    font-size: 1.2em;
+    white-space: nowrap;
+
+    color: rgba(0, 0, 0, .85);
+    text-shadow:white 0 0 5px, white 1px 1px 0;
+
+    background-color: rgba(255,0,0,.5);
+    border: .2em solid rgba(55, 71, 79, 1);
+    border-radius: 2em;
+    box-shadow:.3em .3em .3em rgba(0,0,0,.4);
 }
 
-.pokeball {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+#infoStatsHeader {
 
-    top: 35%;
-
-    width: calc(100vh/3);
-    height: calc(100vh/3);
-
-    background-size: 100% 100%;
+    padding-left: 3em;
+    border-bottom: .2em solid rgba(55, 71, 79, 1);
+    padding-bottom: .4em;
 }
 
-#topBall {
-    z-index: 4;
-    background-image:url("../resources/topBall.png");
+.infoStatName {
+    padding-left: 4.2em;
 }
 
-#bottomBall {
-    z-index: 3;
-    background-image:url("../resources/bottomBall.png");
+.infoStatData {
+    color: lightgoldenrodyellow;
+    text-shadow:
+            2px 2px 4px dimgray,
+            2px 2px 2px black;
+
+    padding-right: 2.2em;
 }
 
-#bottomBallContainer {
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    height: calc(100vh/3);
-    width: calc(100vh/3);
-
-    left: 50%;
-    transform: translate(-50%);
+/* Bottom info */
+#infoTypes {
+    top: 2em;
 }
 
-#pokemon {
-    position: absolute;
-    height: 43%;
-    width: 43%;
-    bottom: 45%;
+#bottomInfo {
+    position: relative;
+    display: block;
 
-    left: 50%;
-    transform: translate(-50%);
+    width: 100%;
+    height: calc(50% - (4.2em + 30px));
 
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-size: contain;
-
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
-    animation-name: pokemonAvatar;
-}
-
-#clouds {
-    z-index: 5;
-    top: 20%;
-    height: 30%;
+    outline: crimson 5px solid;
 }
 
 
 
 /* Search/hint */
+#searchInput {
+    position: absolute;
+    width: 75vw;
+    top: calc(52vmin);
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 #searchBox {
     position: relative;
     display: block;
 
     height: 2em;
-    width: 75%;
+    width: 100%;
 
     margin: 0 auto;
 
@@ -267,6 +275,79 @@ body {
 
 
 
+/* Big Pokeball */
+#pokeBall {
+    position: absolute;
+
+    width: 32vmin;
+    height: 52vmin;
+
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+
+    outline: 5px red solid;
+}
+
+.pokeball {
+    position: absolute;
+    display: inline;
+
+    top: 20vmin;
+
+    width: 32vmin;
+    height: 32vmin;
+
+    background-size: 100% 100%;
+}
+
+#topBall {
+    z-index: 4;
+    background-image:url("../resources/topBall.png");
+}
+
+#bottomBall {
+    z-index: 3;
+    background-image:url("../resources/bottomBall.png");
+}
+
+#bottomBallContainer {
+    position: absolute;
+    z-index: 2;
+    bottom: 2px;
+    height: calc(100vh/3);
+    width: calc(100vh/3);
+
+    left: 50%;
+    transform: translate(-50%);
+}
+
+#pokemon {
+    position: absolute;
+    height: 43%;
+    width: 43%;
+    bottom: 45%;
+
+    left: 50%;
+    transform: translate(-50%);
+
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+    animation-name: pokemonAvatar;
+}
+
+#clouds {
+    z-index: 5;
+    top: 20%;
+    height: 30%;
+}
+
 /* Pokeball animations */
 .questionMarkAnimate {
     position: absolute;
@@ -297,12 +378,12 @@ body {
 
 .openPokeball {
     transition: 1s;
-    top: -1.4% !important;
+    top: 0 !important;
 }
 
 .closePokeball {
     transition: .5s;
-    top: 35% !important;
+    top: 20vmin !important;
 }
 
 
